<resources>
    <string name="app_name">Natural Medicine</string>
    <string name="aceptar">ACCEPT</string>
    <string name="advert">Warning</string>
    <string name="advertencia">This application is not a guide to self-medicate or to replace medicines. The doses and modes of application are general, and therefore, they do not contemplate allergic reactions or reactions specific to each person. The uses presented here are based on the tradition that has been passed down from generation to generation. in generation constituting a naturalistic popular culture. It is important to establish that plants usually have names different in each region and that even the same name can be given to Various species. We are not responsible for problems caused by the misuse of the information presented or by the erroneous identification that the user makes of any of the medicinal plants discussed here.</string>
    <string name="app_id" translatable="false">ca-app-pub-6420027936185714~4539994516</string>
    <string name="banner1" translatable="false">ca-app-pub-6420027936185714/3226912847</string>
    <string name="banner2" translatable="false">ca-app-pub-6420027936185714/7442130658</string>
    <string name="banner3" translatable="false">ca-app-pub-6420027936185714/2719468774</string>
    <string name="categorias_w">Terms used</string>
    <string name="cient_w">Scientific name</string>
    <string name="dolen">Ailments</string>
    <string name="favoritos">Favorites</string>
    <string name="favs">Favorite Plants</string>
    <string name="inicio">Home</string>
    <string name="inter" translatable="false">ca-app-pub-6420027936185714/1214815416</string>
    <string name="medic_load" translatable="false">ca-app-pub-6420027936185714/2492033447</string>
    <string name="modo_w">Mode of use and preparation</string>
    <string name="nativo" translatable="false">ca-app-pub-6420027936185714/4061877472</string>
    <string name="organo_w">Organ or part of the plant used</string>
    <string name="prepa">Prepared</string>
    <string name="rateus">Value us</string>
    <string name="remedies">Remedies</string>
    <string name="usos_w">Traditional uses</string>
    <string name="share">Share</string>
</resources>